--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
-   
+    background:#CF91FF;
+    
 }
 .menu {
     display: flex;
@@ -14,5 +15,5 @@
 .menu svg {
     width: 40px; /* Tamanho dos ícones */
     height: 40px;
-    fill: rgb(0, 255, 34); /* Cor dos ícones */
+    fill:#704F89; /* Cor dos ícones */
 }
